
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct broadsheetfb_par {int dummy; } ;


 int ARRAY_SIZE (int*) ;
 int DB0_GPIO_PIN ;
 int DB15_GPIO_PIN ;
 int PXA_GPIO_TO_IRQ (int ) ;
 int RDY_GPIO_PIN ;
 int free_irq (int ,struct broadsheetfb_par*) ;
 int gpio_free (int) ;
 int* gpios ;

__attribute__((used)) static void am300_cleanup(struct broadsheetfb_par *par)
{
 int i;

 free_irq(PXA_GPIO_TO_IRQ(RDY_GPIO_PIN), par);

 for (i = 0; i < ARRAY_SIZE(gpios); i++)
  gpio_free(gpios[i]);

 for (i = DB0_GPIO_PIN; i <= DB15_GPIO_PIN; i++)
  gpio_free(i);

}
